# ChatServiceProject

./: CMakeLists.txt  README.md
include/: public.hpp
include/db/: db.hpp  user.hpp
include/model/: groupmodel.hpp  offlinemessagemodel.hpp  usermodel.hpp
include/server/: chatserver.hpp  chatservice.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatServer.cpp  chatservice.cpp  main.cpp
src/server/db/: dp.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
